Prepared configuration to pass MSSQL test
git-svn-id: http://svn.arte-consultores.com/svn/arte/istac/metamac/metamac-srm/trunk/metamac-srm@51667 05f23f4b-1f0b-0410-ba1b-ad9509270e59