@@ -25,6 +25,7 @@
             <!-- Does not include in classpath -->
             <scope>provided</scope>
         </dependency>
+        
         <dependency>
             <groupId>com.arte.statistic.statistic-sdmx-srm</groupId>
             <artifactId>statistic-sdmx-srm-core</artifactId>
@@ -473,7 +474,9 @@
             <build>
                 <plugins>
                     <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-antrun-plugin</artifactId>
+                        <version>1.6</version><!--$NO-MVN-MAN-VER$ -->
                         <executions>
                             <execution>
                                 <id>clean-sculptor-conf</id>
@@ -503,7 +506,9 @@
             <build>
                 <plugins>
                     <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-antrun-plugin</artifactId>
+                        <version>1.6</version><!--$NO-MVN-MAN-VER$ -->
                         <executions>
                             <execution>
                                 <id>clean-sculptor-conf</id>
@@ -579,6 +584,44 @@
             </plugin>
 
             <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.14</version>
+                <configuration>
+                    <forkMode>once</forkMode>
+                    <argLine>-Xms512m -Xmx1256m -XX:PermSize=64m -XX:MaxPermSize=128m</argLine>
+                </configuration>
+                <executions>
+                    <!-- Oracle -->
+                    <!-- The execution is called default-test because this is the name of the default execution of this plugin -->
+                    <execution>
+                        <id>default-test</id>
+                        <configuration>
+                            <skip>${maven.surefire.execution.oracle.skip}</skip>
+                            <systemPropertyVariables>
+                                <TEST_DATABASE_PROVIDER>ORACLE</TEST_DATABASE_PROVIDER>
+                            </systemPropertyVariables>
+                            <reportsDirectory>${project.build.directory}/surefire-reports/oracle</reportsDirectory>
+                        </configuration>
+                    </execution>
+                    <execution>
+                        <id>mssql</id>
+                        <phase>test</phase>
+                        <goals>
+                            <goal>test</goal>
+                        </goals>
+                        <configuration>
+                            <skip>${maven.surefire.execution.mssql.skip}</skip>
+                            <systemPropertyVariables>
+                                <TEST_DATABASE_PROVIDER>MSSQL</TEST_DATABASE_PROVIDER>
+                            </systemPropertyVariables>
+                            <reportsDirectory>${project.build.directory}/surefire-reports/mssql</reportsDirectory>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+
+            <plugin>
                 <artifactId>maven-jar-plugin</artifactId>
                 <version>2.3.1</version>
                 <executions>
@@ -625,7 +668,7 @@
                     </properties>
 
                     <jvmSettings>
-                        <copySysProperties>true</copySysProperties>
+                        <!-- <copySysProperties>true</copySysProperties> -->
                         <jvmArgs>
                             <jvmArg>-client</jvmArg>
                             <jvmArg>-Xms256m</jvmArg>
